classic 模式改成 reactive 模式。