@@ -1,62 +1,100 @@
 package cc.openxiot.controller.db.ownership;
 
-import io.quarkus.mongodb.panache.PanacheMongoRepositoryBase;
+import com.mongodb.client.model.Filters;
+import com.mongodb.client.model.ReplaceOptions;
+import io.quarkus.mongodb.reactive.ReactiveMongoClient;
+import io.quarkus.mongodb.reactive.ReactiveMongoCollection;
+import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
-public class OwnershipRepository implements PanacheMongoRepositoryBase<Ownership, OwnershipId> {
+public class OwnershipRepository {
 
-    public void add(Ownership ownership) {
+    @Inject
+    ReactiveMongoClient mongoClient;
+
+    @ConfigProperty(name = "quarkus.mongodb.database", defaultValue = "default")
+    String database;
+
+    private ReactiveMongoCollection<Ownership> getCollection() {
+        return mongoClient.getDatabase(database).getCollection("ownership", Ownership.class);
+    }
+
+    public Uni<Void> add(Ownership ownership) {
         ensureKey(ownership);
-        persist(ownership);
+        return getCollection().insertOne(ownership).replaceWithVoid();
     }
 
-    public void add(List<Ownership> ownerships) {
+    public Uni<Void> add(List<Ownership> ownerships) {
         ownerships.forEach(this::ensureKey);
-        persist(ownerships);
+        return getCollection().insertMany(ownerships).replaceWithVoid();
     }
 
-    public void remove(OwnershipId id) {
-        deleteById(id);
+    public Uni<Void> remove(OwnershipId id) {
+        return getCollection()
+                .deleteOne(Filters.eq("_id", id))
+                .replaceWithVoid();
     }
 
-    public void remove(List<Ownership> ownerships) {
-        List<OwnershipId> ids = ownerships.stream()
-                .map(o -> o.id)
-                .collect(Collectors.toList());
-        delete("_id in ?1", ids);
+    public Uni<Void> remove(List<Ownership> ownerships) {
+        List<OwnershipId> ids = ownerships.stream().map(o -> o.id).toList();
+        return getCollection()
+                .deleteMany(Filters.in("_id", ids))
+                .replaceWithVoid();
     }
 
-    public void update(Ownership ownership) {
+    public Uni<Void> update(Ownership ownership) {
         ensureKey(ownership);
-        persistOrUpdate(ownership);
+        return getCollection()
+                .replaceOne(Filters.eq("_id", ownership.id), ownership, new ReplaceOptions().upsert(true))
+                .replaceWithVoid();
     }
 
-    public void update(Collection<Ownership> ownerships) {
+    public Uni<Void> update(Collection<Ownership> ownerships) {
         ownerships.forEach(this::ensureKey);
-        for (Ownership o : ownerships) {
-            persistOrUpdate(o);
-        }
+        return Uni.combine().all().unis(
+                ownerships.stream().map(o ->
+                        getCollection()
+                                .replaceOne(Filters.eq("_id", o.id), o, new ReplaceOptions().upsert(true))
+                                .replaceWithVoid()
+                ).toList()
+        ).discardItems();
     }
 
-    public Ownership get(String did, String appId, String ownerId) {
-        return findById(new OwnershipId(did, appId, ownerId));
+    public Uni<Ownership> get(String did, String appId, String ownerId) {
+        return getCollection()
+                .find(Filters.eq("_id", new OwnershipId(did, appId, ownerId)))
+                .collect().first();
     }
 
-    public List<Ownership> get(String appId, String ownerId, List<String> deviceIds) {
-        return list("did in ?1 and appId = ?2 and ownerId = ?3", deviceIds, appId, ownerId);
+    public Uni<List<Ownership>> get(String appId, String ownerId, List<String> deviceIds) {
+        return getCollection()
+                .find(Filters.and(
+                        Filters.in("did", deviceIds),
+                        Filters.eq("appId", appId),
+                        Filters.eq("ownerId", ownerId)
+                ))
+                .collect().asList();
     }
 
-    public List<Ownership> get(String appId, String ownerId) {
-        return list("appId = ?1 and ownerId = ?2", appId, ownerId);
+    public Uni<List<Ownership>> get(String appId, String ownerId) {
+        return getCollection()
+                .find(Filters.and(
+                        Filters.eq("appId", appId),
+                        Filters.eq("ownerId", ownerId)
+                ))
+                .collect().asList();
     }
 
-    public List<Ownership> get(String did) {
-        return list("did", did);
+    public Uni<List<Ownership>> get(String did) {
+        return getCollection()
+                .find(Filters.eq("did", did))
+                .collect().asList();
     }
 
     private void ensureKey(Ownership o) {
