@@ -16,6 +16,7 @@ import cn.geekcity.xiot.spec.operation.PropertyOperation;
 import cn.geekcity.xiot.spec.ownership.DeviceOwner;
 import cn.geekcity.xiot.spec.status.Status;
 import cn.geekcity.xiot.spec.summary.Summary;
+import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import org.jboss.logging.Logger;
@@ -46,127 +47,132 @@ public class XcpDeviceEndpointHandler {
     // 需要推送到 事件处理中心
     //------------------------------------------------------------------------------
 
-    public void onActive(XcpDeviceEndpoint endpoint) {
+    public Uni<Void> onActive(XcpDeviceEndpoint endpoint) {
         logger.infov("onActive: {0}", endpoint.root().did());
 
         DeviceRegistry device = DeviceRegistryMapper.toEntity(endpoint.root(), endpoint.replicaIp());
-        registry.register(device);
 
-        this.event.publish(new DeviceRootActive(device.did));
-
-        onSummaryChanged(endpoint, endpoint.root().did(), endpoint.root().summary().online(true), "active");
-//        onPropertiesChanged(endpoint,  endpoint.root().getLastPropertyOperations(), "active");
+        return registry.register(device)
+                .invoke(v -> this.event.publish(new DeviceRootActive(device.did)))
+                .chain(v -> onSummaryChanged(endpoint, endpoint.root().did(), endpoint.root().summary().online(true), "active"));
     }
 
-    public void onInactive(XcpDeviceEndpoint endpoint) {
+    public Uni<Void> onInactive(XcpDeviceEndpoint endpoint) {
         logger.infov("onInactive: {0}", endpoint.root().did());
 
-        registry.update(endpoint.root().did(), false);
-
-        this.event.publish(new DeviceRootInactive(endpoint.root().did()));
-
-        onSummaryChanged(endpoint, endpoint.root().did(), endpoint.root().summary().online(false), "active");
+        return registry.update(endpoint.root().did(), false)
+                .invoke(v -> this.event.publish(new DeviceRootInactive(endpoint.root().did())))
+                .chain(v -> onSummaryChanged(endpoint, endpoint.root().did(), endpoint.root().summary().online(false), "active"));
     }
 
-    public void onChildrenActive(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
-        DeviceRegistry root = registry.get(endpoint.root().did());
-        List<DeviceRegistry> lastChildren = registry.getChildren(endpoint.root().did());
-        Map<String, DeviceRegistry> registered = registry.get(children.stream().map(DeviceImage::did).toList())
-                .stream().collect(Collectors.toMap(x -> x.did, Function.identity()));
+    public Uni<Void> onChildrenActive(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
+        Uni<DeviceRegistry> uniRoot = registry.get(endpoint.root().did());
+        Uni<List<DeviceRegistry>> uniLastChildren = registry.getChildren(endpoint.root().did());
+        Uni<List<DeviceRegistry>> uniRegistered = registry.get(children.stream().map(DeviceImage::did).toList());
 
-        List<DeviceRegistry> added = new ArrayList<>();
-        List<DeviceRegistry> changed = new ArrayList<>();
-        List<DeviceRegistry> removed = new ArrayList<>();
+        return Uni.combine().all()
+                .unis(uniRoot, uniLastChildren, uniRegistered)
+                .with((root, lastChildren, registeredList) -> {
+                    Map<String, DeviceRegistry> registered = registeredList.stream()
+                            .collect(Collectors.toMap(x -> x.did, Function.identity()));
 
-        // 计算哪些是需要添加的，哪些是需要修改的
-        for (DeviceImage child : children) {
-            DeviceRegistry device = registered.get(child.did());
-            if (device == null) {
-                added.add(DeviceRegistry.of(child.did(), child.summary(), root));
-            } else {
-                if (device.change(child.summary(), root)) {
-                    changed.add(device);
-                }
-            }
-        }
+                    List<DeviceRegistry> added = new ArrayList<>();
+                    List<DeviceRegistry> changed = new ArrayList<>();
+                    List<DeviceRegistry> removed = new ArrayList<>();
 
-        // 计算哪些是需要删除的
-        Map<String, DeviceImage> current = children.stream().collect(Collectors.toMap(DeviceImage::did, Function.identity()));
-        for (DeviceRegistry last : lastChildren) {
-            last.rootId = null;
+                    for (DeviceImage child : children) {
+                        DeviceRegistry device = registered.get(child.did());
+                        if (device == null) {
+                            added.add(DeviceRegistry.of(child.did(), child.summary(), root));
+                        } else {
+                            if (device.change(child.summary(), root)) {
+                                changed.add(device);
+                            }
+                        }
+                    }
 
-            if (!current.containsKey(last.did)) {
-                removed.add(last);
-            }
-        }
+                    Map<String, DeviceImage> current = children.stream()
+                            .collect(Collectors.toMap(DeviceImage::did, Function.identity()));
+                    for (DeviceRegistry last : lastChildren) {
+                        last.rootId = null;
+                        if (!current.containsKey(last.did)) {
+                            removed.add(last);
+                        }
+                    }
 
-        logger.infov("added: {0}, changed: {1}, removed: {2}", added.size(), changed.size(), removed.size());
+                    logger.infov("added: {0}, changed: {1}, removed: {2}", added.size(), changed.size(), removed.size());
 
-        registry.register(added);
-        registry.update(removed);
-        registry.update(changed);
-
-        publishAdded(root.did, added, children);
-        publishRemoved(root.did, removed, children);
-        publishChanged(root.did, changed, children);
+                    return new ChildrenResult(root.did, added, changed, removed, children);
+                })
+                .chain(r -> registry.register(r.added)
+                        .chain(v -> registry.update(r.removed))
+                        .chain(v -> registry.update(r.changed))
+                        .invoke(v -> {
+                            publishAdded(r.rootId, r.added, r.children);
+                            publishRemoved(r.rootId, r.removed, r.children);
+                            publishChanged(r.rootId, r.changed, r.children);
+                        }));
     }
 
-    public void onChildrenAdded(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
+    public Uni<Void> onChildrenAdded(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
         logger.infov("onChildrenAdded");
 
-        DeviceRegistry root = registry.get(endpoint.root().did());
-
-        List<DeviceRegistry> devices = DeviceRegistryMapper.toEntities(children, endpoint.replicaIp());
-        for (DeviceRegistry device : devices) {
-            device.rootId = root.rootId;
-            device.accessKey = root.accessKey;
-        }
-
-        registry.register(devices);
-
-        List<Device> list = children.stream().map(x -> new Device(x.did(), x.summary())).collect(Collectors.toList());
-        DeviceChildrenAdded childrenAdded = new DeviceChildrenAdded(root.did).children(list);
-        event.publish(childrenAdded);
+        return registry.get(endpoint.root().did())
+                .chain(root -> {
+                    List<DeviceRegistry> devices = DeviceRegistryMapper.toEntities(children, endpoint.replicaIp());
+                    for (DeviceRegistry device : devices) {
+                        device.rootId = root.rootId;
+                        device.accessKey = root.accessKey;
+                    }
+                    return registry.register(devices)
+                            .invoke(v -> {
+                                List<Device> list = children.stream()
+                                        .map(x -> new Device(x.did(), x.summary()))
+                                        .toList();
+                                event.publish(new DeviceChildrenAdded(root.did).children(list));
+                            });
+                });
     }
 
-    public void onChildrenRemoved(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
+    public Uni<Void> onChildrenRemoved(XcpDeviceEndpoint endpoint, List<DeviceImage> children) {
         logger.infov("onChildrenRemoved");
 
-        DeviceRegistry root = registry.get(endpoint.root().did());
-
-        List<DeviceRegistry> devices = children.stream()
-                .map(child -> DeviceRegistry.of(child.did(), child.summary(), root))
-                .collect(Collectors.toList());
-
-        registry.register(devices);
-
-        List<String> list = children.stream().map(DeviceImage::did).collect(Collectors.toList());
-        DeviceChildrenRemoved childrenRemoved = new DeviceChildrenRemoved(root.did).children(list);
-        event.publish(childrenRemoved);
+        return registry.get(endpoint.root().did())
+                .chain(root -> {
+                    List<DeviceRegistry> devices = children.stream()
+                            .map(child -> DeviceRegistry.of(child.did(), child.summary(), root))
+                            .toList();
+                    return registry.register(devices)
+                            .invoke(v -> {
+                                List<String> list = children.stream().map(DeviceImage::did).toList();
+                                event.publish(new DeviceChildrenRemoved(root.did).children(list));
+                            });
+                });
     }
 
-    public void onPropertiesChanged(XcpDeviceEndpoint endpoint, List<PropertyOperation> properties, String id) {
+    public Uni<Void> onPropertiesChanged(XcpDeviceEndpoint endpoint, List<PropertyOperation> properties, String id) {
         logger.infov("onPropertiesChanged: {0}", id);
 
         if (properties.isEmpty()) {
-            return;
+            return Uni.createFrom().voidItem();
         }
 
         this.event.publish(new DevicePropertiesChanged(new Date().getTime(), properties));
+        return Uni.createFrom().voidItem();
     }
 
-    public void onEventOccurred(XcpDeviceEndpoint endpoint, EventOperation event, String id) {
+    public Uni<Void> onEventOccurred(XcpDeviceEndpoint endpoint, EventOperation eventOp, String id) {
         logger.infov("onEventOccurred: {0}", id);
 
-        this.event.publish(new DeviceEventOccurred(new Date().getTime(), event));
+        this.event.publish(new DeviceEventOccurred(new Date().getTime(), eventOp));
+        return Uni.createFrom().voidItem();
     }
 
-    public void onSummaryChanged(XcpDeviceEndpoint endpoint, String did, Summary summary, String id) {
+    public Uni<Void> onSummaryChanged(XcpDeviceEndpoint endpoint, String did, Summary summary, String id) {
         logger.infov("onSummaryChanged: {0}", id);
 
-        registry.updateOneWithoutAccessKey(did, summary);
-
-        this.event.publish(new DeviceSummaryChanged(did).summary(summary));
+        return registry.updateOneWithoutAccessKey(did, summary)
+                .invoke(v -> this.event.publish(new DeviceSummaryChanged(did).summary(summary)));
     }
 
     public void onAccessKeyChanged(XcpDeviceEndpoint endpoint, String did, String key, String id) {
@@ -176,12 +182,9 @@ public class XcpDeviceEndpointHandler {
     }
 
     private void publishAdded(String rootId, List<DeviceRegistry> added, List<DeviceImage> children) {
-        if (added.isEmpty()) {
-            return;
-        }
+        if (added.isEmpty()) return;
 
         List<String> devices = added.stream().map(x -> x.did).toList();
-
         List<Device> childrenAdded = children.stream()
                 .filter(x -> devices.contains(x.did()))
                 .map(x -> new Device(x.did(), x.summary()))
@@ -191,25 +194,19 @@ public class XcpDeviceEndpointHandler {
     }
 
     private void publishRemoved(String rootId, List<DeviceRegistry> removed, List<DeviceImage> children) {
-        if (removed.isEmpty()) {
-            return;
-        }
+        if (removed.isEmpty()) return;
 
         List<String> devices = removed.stream().map(x -> x.did).toList();
         event.publish(new DeviceChildrenRemoved(rootId).children(devices));
     }
 
     private void publishChanged(String rootId, List<DeviceRegistry> changed, List<DeviceImage> children) {
-        if (changed.isEmpty()) {
-            return;
-        }
+        if (changed.isEmpty()) return;
 
         List<String> devices = changed.stream().map(x -> x.did).toList();
-
         for (DeviceImage child : children) {
             if (devices.contains(child.did())) {
-                DeviceSummaryChanged summaryChanged = new DeviceSummaryChanged(child.did()).summary(child.summary());
-                event.publish(summaryChanged);
+                event.publish(new DeviceSummaryChanged(child.did()).summary(child.summary()));
             }
         }
     }
@@ -218,47 +215,58 @@ public class XcpDeviceEndpointHandler {
     // AccessKey 读写
     //------------------------------------------------------------------------------
 
-    public void setAccessKey(String did, String key) {
+    public Uni<Void> setAccessKey(String did, String key) {
         logger.infov("setAccessKey: {0} => {1}", did, key);
-        registry.updateAccessKey(did, key);
+        return registry.updateAccessKey(did, key);
     }
 
-    public String getAccessKey(String did) throws IotError {
+    public Uni<String> getAccessKey(String did) {
         logger.infov("getAccessKey: {0}", did);
-        DeviceRegistry device = registry.get(did);
-        if (device == null) {
-            throw new IotError(Status.INTERNAL_ERROR, "device not found");
-        }
-
-        return device.accessKey;
+        return registry.get(did).chain(device -> {
+            if (device == null) {
+                return Uni.createFrom().failure(new IotError(Status.INTERNAL_ERROR, "device not found"));
+            }
+            return Uni.createFrom().item(device.accessKey);
+        });
     }
 
     //------------------------------------------------------------------------------
     // Owner 读写
     //------------------------------------------------------------------------------
 
-    public void addOwner(String did, DeviceOwner owner) throws IotError {
+    public Uni<Void> addOwner(String did, DeviceOwner owner) {
         logger.infov("addOwner: {0} => {1}/{2}", did, owner.appId(), owner.ownerId());
 
-        DeviceRegistry device = registry.get(did);
-        if (device == null) {
-            throw new IotError(Status.INTERNAL_ERROR, "device not found");
-        }
-
-        ownership.add(Ownership.of(did, owner.appId(), owner.ownerId(), device.accessKey));
+        return registry.get(did).chain(device -> {
+            if (device == null) {
+                return Uni.createFrom().failure(new IotError(Status.INTERNAL_ERROR, "device not found"));
+            }
+            return ownership.add(Ownership.of(did, owner.appId(), owner.ownerId(), device.accessKey));
+        });
     }
 
-    public void removeOwner(String did, DeviceOwner owner) {
+    public Uni<Void> removeOwner(String did, DeviceOwner owner) {
         logger.infov("removeOwner: {0} => {1}/{2}", did, owner.appId(), owner.ownerId());
 
         OwnershipId id = new OwnershipId(did, owner.appId(), owner.ownerId());
-        ownership.remove(id);
+        return ownership.remove(id);
     }
 
-    public List<DeviceOwner> getOwners(String did) {
+    public Uni<List<DeviceOwner>> getOwners(String did) {
         logger.infov("getOwners: {0}", did);
 
-        List<Ownership> ownerships = ownership.get(did);
-        return ownerships.stream().map(x -> new DeviceOwner(x.appId, x.ownerId)).toList();
+        return ownership.get(did)
+                .map(ownerships -> ownerships.stream()
+                        .map(x -> new DeviceOwner(x.appId, x.ownerId))
+                        .toList());
+    }
+
+    private record ChildrenResult(
+            String rootId,
+            List<DeviceRegistry> added,
+            List<DeviceRegistry> removed,
+            List<DeviceRegistry> changed,
+            List<DeviceImage> children
+    ) {
     }
 }
